find a smart way use protobuf