@@ -1,6 +1,8 @@
 package performance;
 
-import org.openjdk.jmh.annotations.*;
+import org.openjdk.jmh.annotations.Benchmark;
+import org.openjdk.jmh.annotations.Scope;
+import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
@@ -16,28 +18,28 @@ public class JmhApp {
 
     private Long origin = 0L;
 
+
     private AtomicLong al = new AtomicLong(0L);
+
 
     public static void main(String[] args) throws RunnerException {
         Options options = new OptionsBuilder()
-                .include("xxx.xxx")
+                .include(JmhApp.class.getSimpleName())
                 .forks(1)
-                .threads(100)
+                .threads(200)
+                .warmupIterations(1)
+                .measurementIterations(2)
                 .build();
 
         new Runner(options).run();
     }
 
-    @Fork(1)
     @Benchmark
-    @CompilerControl(CompilerControl.Mode.DONT_INLINE)
     public long rawAdd() {
         return ++origin;
     }
 
-    @Fork(1)
     @Benchmark
-    @CompilerControl(CompilerControl.Mode.DONT_INLINE)
     public long syncAdd() {
         synchronized (this) {
             return ++origin;
@@ -45,9 +47,7 @@ public class JmhApp {
     }
 
 
-    @Fork(value = 1, jvmArgsAppend = "-XX:-UseBiasedLocking")
     @Benchmark
-    @CompilerControl(CompilerControl.Mode.DONT_INLINE)
     public long casAdd() {
         return al.decrementAndGet();
     }
